--- a/index.html
+++ b/index.html
@@ -356,7 +356,7 @@
                         <p class="card-text text-light" style="font-family:  Poppins, sans-serif;"><i>Spring Boot, Spring Security, MySQL, Thymeleaf, Html, Css,
                                 Bootstrap</i></p>
                         <a class="btn btn-dark btn-lg col-4"
-                            href="https://drive.google.com/drive/folders/1yyZz8_uRLcwnvF0Iqh4VgTFjMK1Md3UX"> View</a>
+                            href="https://drive.google.com/file/d/1aHajyTybPRkkuszo4ThtPsEc3CmX6921/view?usp=sharing"> View</a>
                     </div>
                 </div>
             </div>
@@ -374,7 +374,7 @@
                         <p class="card-text text-light" style="font-family:  Poppins, sans-serif;"><i>Spring Boot, Spring Security, MySQL, Thymeleaf, Html, Css,
                                 Bootstrap</i></p>
                         <a class="btn btn-dark btn-lg col-4"
-                            href="https://drive.google.com/drive/folders/1-jiIvYoBu-iQuuFCKww9cM-dlbVCdlvT"> View</a>
+                            href="https://drive.google.com/file/d/1C2_KoaGP-rObk0AovJtyuuYlWv3azozZ/view?usp=sharing"> View</a>
                     </div>
                 </div>
             </div>
